[metadata]
name = m1n1Exception
version = 2.6
author = MiniExploit
author_email = miniexploitttt@gmail.com
description = Python library for conveniently handling errors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mini-Exploit/m1n1Exception
project_urls =
    Bug Tracker = https://github.com/Mini-Exploit/m1n1Exception/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src